--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "dotenv": "^2.0.0",
     "express": "^4.17.1",
     "morgan": "^1.9.1",
+    "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0",
     "pg": "^6.4.2",
     "pg-native": "^3.0.0"
   },
